--- a/Example.Rmd
+++ b/Example.Rmd
@@ -8,36 +8,48 @@ output:
 
 
 ```{r load_package}
-source('spatstat_vectra/spatstat_vectra.R')
-```
-
-```{r load_data, cache=T}
-#base_path <- system.file("extdata", "samples", package = "phenoptrExamples")
-base_path <- '../data/Exported data tables/'
+library(reshape2)
+source('spatstat_vectra.R')
+base_path <- '../../data/Exported data tables/'
 paths <- list_cell_seg_files(base_path)
 paste("There are", length(paths), "paths currently loaded")
 
 
-csd <- purrr::map_df(paths, read_cell_seg_data) # no tif applied?
-# dim(csd)
+pheno_vector_absolut = c("CD163+PDL1-","CD163+PDL1+","CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+","Other","Other PDL1+","PAX5+PDL1-", "PAX5+PDL1+")
 
-phenos <- unique(csd$Phenotype)
-csd <- csd %>%
-  group_by(`Sample Name`) %>%
-  do(bind_cols(., find_nearest_distance(., phenos)))
-
-paste("dimensions of the data is", dim(csd)[1], "times", dim(csd)[2]) # 1805834 197
-merged_filtered = csd %>% filter(Phenotype != "")
-paste("dimensions of the data is", dim(merged_filtered)[1], "times", dim(merged_filtered)[2]) #1805653 197
-
-merged_filtered_with_distance <- merged_filtered %>%
-  group_by(`Sample Name`) %>%
-  do(bind_cols(., find_nearest_distance(.)))
-paste("dimensions of the data is", dim(merged_filtered_with_distance)[1], "times", dim(merged_filtered_with_distance)[2]) #1805653 217
+colors_absolut = c("magenta", "brown", "red", "blue", "green", "yellow", "gray", "pink", "orange", "cyan")
+names(colors_absolut) = pheno_vector_absolut
+r_vec = c(10,20)
 
 ```
 
-```{r extreme_cases}
+
+```{r HO105_extreme, fig.width=8, fig.height=8}
+#base_path <- system.file("extdata", "samples", package = "phenoptrExamples")
+extreme = paste0(base_path, c(
+		'HO105-194_[16067,37856]_cell_seg_data.txt', # PD-L1 positive cluster + Tumor cluster
+		'HO105-194_[15564,37856]_cell_seg_data.txt', # PD-L1 positive cluster + Tumor cluster
+		'HO105-194_[16029,38205]_cell_seg_data.txt' # not clustered
+	))
+
+
+outputs = list()
+for (file in extreme){
+	print(paste('procesing', file))
+
+	data = purrr::map_df(file, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
+	data_with_distance = data %>%
+	  do(bind_cols(., find_nearest_distance(.)))
+
+  	samplename = gsub('_cell_seg_data.txt', '', tail(strsplit(file, '/')[[1]],1))
+	outputs[[samplename]] = do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut, 
+			    NULL, plotter = c(TRUE, TRUE,TRUE),XposCol = 'Cell X Position', envelope=TRUE, 
+			    fig.prefix = './', fig.width = 720, fig.height = 720,
+			    YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', samplename, r_vec = r_vec)
+}
+```
+
+```{r extreme_cases, eval=F}
 
 pheno_vector_absolut = c("CD163+PDL1-","CD163+PDL1+","CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+","Other","Other PDL1+","PAX5+PDL1-", "PAX5+PDL1+")
 Cols = c("magenta","brown","red","blue","green","yellow","gray","pink","orange","cyan")
