--- a/Main.Rmd
+++ b/Main.Rmd
@@ -55,6 +55,7 @@ rownames(statistics) = pheno_vector_absolut
 ```{r RUN do analyse on all samples, echo = TRUE, eval = TRUE}
 # check for each image which pheotypes are missing for overview
 
+
 source("spatstat_vectra.R")
 
 
@@ -96,16 +97,23 @@ for (samplename_long in paths[1:1]){
   
   samplename = str_replace(samplename_long,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/","")
   samplename = str_replace(samplename,"_cell_seg_data.txt", "")
+  
+  output_dir <- file.path("fig", samplename)
 
+  if (!dir.exists(output_dir)){
+    dir.create(output_dir)
+  } else {
+    print("Directory already exists!")
+    }
 
   # stop()
   data_with_distance = data %>%
     do(bind_cols(., find_nearest_distance(.)))
   paste("dimensions of the data with distances is", dim(data_with_distance)[1], "times", dim(data_with_distance)[2])
   
-  
-  
-  output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+    output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = output_dir, XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "F", envelope_bool = TRUE)
+
+  # output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = './', XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
   
   samples_output[[samplename]] = output
   # stop()
@@ -167,7 +175,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -183,7 +191,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -198,7 +206,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -237,7 +245,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -253,7 +261,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -269,7 +277,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -285,7 +293,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -301,7 +309,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -337,7 +345,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -373,7 +381,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -409,7 +417,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -445,7 +453,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -482,7 +490,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
@@ -498,7 +506,7 @@ samplename_path = str_replace(samplename_path,"C:/Users/erikb/Documents/Thesis -
 samplename_path = str_replace(samplename_path,"_cell_seg_data.txt", "")
 samplename = samplename_path
 
-output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, envelope = TRUE)
+output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
 
 samples_output[[samplename]] = output
 
