--- a/Main.Rmd
+++ b/Main.Rmd
@@ -83,12 +83,12 @@ r_vec = c(20)
 
 plotter_sample = FALSE
 plotter_quadrat = FALSE
-plotter_alltypes = TRUE
+plotter_alltypes = FALSE
 
 plotter_bools = c(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 
-for (samplename_long in paths[1:1]){
+for (samplename_long in paths[4:4]){
   # print(samplename_long)
   # samplename_long = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/HO105-194_[16067,37856]_cell_seg_data.txt" # PD-L1 positive cluster + Tumor cluster
   # print(samplename_long)
@@ -98,21 +98,26 @@ for (samplename_long in paths[1:1]){
   samplename = str_replace(samplename_long,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/","")
   samplename = str_replace(samplename,"_cell_seg_data.txt", "")
   
-  output_dir <- file.path("fig", samplename)
 
-  if (!dir.exists(output_dir)){
-    dir.create(output_dir)
-  } else {
-    print("Directory already exists!")
+  if (TRUE %in% plotter_bools){
+    output_dir <- file.path("fig", samplename)
+    
+    if (!dir.exists(output_dir)){
+      dir.create(output_dir)
+    } else {
+      print(paste("Directory",samplename, "already exists! Figures were overwritten."))
     }
-
-  # stop()
+  }
+  
+  
   data_with_distance = data %>%
     do(bind_cols(., find_nearest_distance(.)))
   paste("dimensions of the data with distances is", dim(data_with_distance)[1], "times", dim(data_with_distance)[2])
   
-    output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = output_dir, XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "F", envelope_bool = TRUE)
-
+  
+  
+  output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = output_dir, XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
+  
   # output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = './', XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = "G", envelope_bool = TRUE)
   
   samples_output[[samplename]] = output
